--- a/cinema/package.json
+++ b/cinema/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "jest --colors",
-    "start": "babel-node index.js"
+    "dev": "babel-node index.js"
   },
   "dependencies": {
     "uuid-js": "*"
@@ -9,12 +9,16 @@
   "babel": {
     "presets": [
       "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
     ]
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "jest": "^24.7.1"
   }
